# 3D-Engine

./: README.md
minecraft_clone/: CMakeLists.txt  TC_WIN32.cmake
minecraft_clone/game_backup/: 3D_Kitty  imgui.ini
minecraft_clone/res/shaders/: basic.glsl
minecraft_clone/src/: commonInclude.h  cube.h  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBuffer.h
minecraft_clone/windows_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  imgui.ini
